--- a/res/simian_viewer_resources.qrc
+++ b/res/simian_viewer_resources.qrc
@@ -10,6 +10,7 @@
     </qresource>
     <qresource prefix="">
         <file>jslibs/d3.v4.js</file>
+		<file>jslibs/d3-tip.min.js</file>
         <file>jslibs/d3-context-menu.js</file>
         <file>jslibs/d3-scale-chromatic.js</file>
         <file>jslibs/nouislider.css</file>
