include local js library file

--- a/res/simian_viewer_resources.qrc
+++ b/res/simian_viewer_resources.qrc
@@ -47,5 +47,7 @@
         <file>jstools/colormaps.js</file>
         <file>jstools/ui.js</file>
         <file>jstools/ui.css</file>
+		<file>jstools/d3-legend.js</file
+		<file>jstools/d3-legend.min.js</file
     </qresource>
 </RCC>
